--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -13,8 +13,8 @@ body {
 nav{
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
-
 #busca {
   margin:0 auto;
   padding:0;
@@ -42,6 +42,10 @@ nav{
   font-weight:bold;
   text-transform:uppercase;
   
+  }
+  .no-js .cd-vertical-nav a:active {
+    color: #bd36fc;
+    
   }
   .label:hover{
     color: #550555
@@ -279,137 +283,18 @@ Vertical navigation
     -moz-transition: -moz-transform 0.4s, background-color 0.2s;
     transition: transform 0.4s, background-color 0.2s;
   }
-  .cd-vertical-nav a::after {
-    /* icon */
-    opacity: 0;
-    top: 8px;
-    height: 16px;
-    width: 16px;
-    background: url(../img/cd-nav-icons.svg) no-repeat;
-    -webkit-transform: translateX(-50%) scale(0);
-    -moz-transform: translateX(-50%) scale(0);
-    -ms-transform: translateX(-50%) scale(0);
-    -o-transform: translateX(-50%) scale(0);
-    transform: translateX(-50%) scale(0);
-    -webkit-transition: -webkit-transform 0.4s 0s, opacity 0.1s 0.3s;
-    -moz-transition: -moz-transform 0.4s 0s, opacity 0.1s 0.3s;
-    transition: transform 0.4s 0s, opacity 0.1s 0.3s;
-  }
-  .cd-vertical-nav a.active::before, .no-touch .cd-vertical-nav a:hover::before {
-    background-color: #af66af;
-  }
-  .cd-vertical-nav li:first-of-type a::after {
-    /* change icon using image sprites */
-    background-position: 0px -48px;
-    /* fix bug with transitions - set scale(0.01) rather than scale(0) */
-    -webkit-transform: translateX(-50%) translateY(4.5em) scale(0.01);
-    -moz-transform: translateX(-50%) translateY(4.5em) scale(0.01);
-    -ms-transform: translateX(-50%) translateY(4.5em) scale(0.01);
-    -o-transform: translateX(-50%) translateY(4.5em) scale(0.01);
-    transform: translateX(-50%) translateY(4.5em) scale(0.01);
-  }
-  .cd-vertical-nav li:first-of-type a::before {
-    -webkit-transform: translateX(-50%) translateY(4.5em) scale(0.25);
-    -moz-transform: translateX(-50%) translateY(4.5em) scale(0.25);
-    -ms-transform: translateX(-50%) translateY(4.5em) scale(0.25);
-    -o-transform: translateX(-50%) translateY(4.5em) scale(0.25);
-    transform: translateX(-50%) translateY(4.5em) scale(0.25);
-  }
-  .cd-vertical-nav li:nth-of-type(2) a::after {
-    background-position: 0px -32px;
-    -webkit-transform: translateX(-50%) translateY(1.5em) scale(0.01);
-    -moz-transform: translateX(-50%) translateY(1.5em) scale(0.01);
-    -ms-transform: translateX(-50%) translateY(1.5em) scale(0.01);
-    -o-transform: translateX(-50%) translateY(1.5em) scale(0.01);
-    transform: translateX(-50%) translateY(1.5em) scale(0.01);
-  }
-  .cd-vertical-nav li:nth-of-type(2) a::before {
-    -webkit-transform: translateX(-50%) translateY(1.5em) scale(0.25);
-    -moz-transform: translateX(-50%) translateY(1.5em) scale(0.25);
-    -ms-transform: translateX(-50%) translateY(1.5em) scale(0.25);
-    -o-transform: translateX(-50%) translateY(1.5em) scale(0.25);
-    transform: translateX(-50%) translateY(1.5em) scale(0.25);
-  }
-  .cd-vertical-nav li:nth-of-type(3) a::after {
-    background-position: 0px -16px;
-    -webkit-transform: translateX(-50%) translateY(-1.5em) scale(0.01);
-    -moz-transform: translateX(-50%) translateY(-1.5em) scale(0.01);
-    -ms-transform: translateX(-50%) translateY(-1.5em) scale(0.01);
-    -o-transform: translateX(-50%) translateY(-1.5em) scale(0.01);
-    transform: translateX(-50%) translateY(-1.5em) scale(0.01);
-  }
-  .cd-vertical-nav li:nth-of-type(3) a::before {
-    -webkit-transform: translateX(-50%) translateY(-1.5em) scale(0.25);
-    -moz-transform: translateX(-50%) translateY(-1.5em) scale(0.25);
-    -ms-transform: translateX(-50%) translateY(-1.5em) scale(0.25);
-    -o-transform: translateX(-50%) translateY(-1.5em) scale(0.25);
-    transform: translateX(-50%) translateY(-1.5em) scale(0.25);
-  }
-  .cd-vertical-nav li:nth-of-type(4) a::after {
-    background-position: 0px 0px;
-    -webkit-transform: translateX(-50%) translateY(-4.5em) scale(0.01);
-    -moz-transform: translateX(-50%) translateY(-4.5em) scale(0.01);
-    -ms-transform: translateX(-50%) translateY(-4.5em) scale(0.01);
-    -o-transform: translateX(-50%) translateY(-4.5em) scale(0.01);
-    transform: translateX(-50%) translateY(-4.5em) scale(0.01);
-  }
-  .cd-vertical-nav li:nth-of-type(4) a::before {
-    -webkit-transform: translateX(-50%) translateY(-4.5em) scale(0.25);
-    -moz-transform: translateX(-50%) translateY(-4.5em) scale(0.25);
-    -ms-transform: translateX(-50%) translateY(-4.5em) scale(0.25);
-    -o-transform: translateX(-50%) translateY(-4.5em) scale(0.25);
-    transform: translateX(-50%) translateY(-4.5em) scale(0.25);
-  }
+  /* reset.css */
   .cd-vertical-nav .label {
     display: block;
-    /* Force Hardware Acceleration */
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-transform: translateX(100%);
-    -moz-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    -o-transform: translateX(100%);
-    transform: translateX(100%);
-    -webkit-transition: -webkit-transform 0.4s;
-    -moz-transition: -moz-transform 0.4s;
-    transition: transform 0.4s;
-  }
-  .no-touch .cd-vertical-nav:hover a::before, .no-touch .cd-vertical-nav:hover a::after, .touch .cd-vertical-nav li:nth-of-type(n) a::before, .touch .cd-vertical-nav li:nth-of-type(n) a::after {
-    -webkit-transform: translateX(-50%) scale(1);
-    -moz-transform: translateX(-50%) scale(1);
-    -ms-transform: translateX(-50%) scale(1);
-    -o-transform: translateX(-50%) scale(1);
-    transform: translateX(-50%) scale(1);
-    /* set a rotation to fix bug on Firefox - http://gielberkers.com/how-to-fix-shaking-css-transitions-in-firefox/ */
-    -moz-transform: translateX(-50%) scale(1) rotate(0.02deg);
-  }
-  .no-touch .cd-vertical-nav:hover a::after, .touch .cd-vertical-nav a::after {
-    opacity: 1;
-    -webkit-transition: -webkit-transform 0.4s, opacity 0s;
-    -moz-transition: -moz-transform 0.4s, opacity 0s;
-    transition: transform 0.4s, opacity 0s;
-  }
-  .no-touch .cd-vertical-nav:hover .label, .touch .cd-vertical-nav .label {
-    -webkit-transform: translateX(0);
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
   }
 }
 
 /* -------------------------------- 
 
-Content Sections - basic style
+Sections - estilo básico
 
 -------------------------------- */
 .cd-section {
-  /* vertically align its content*/
   display: table;
   width: 100%;
   height: 100vh;
@@ -419,7 +304,6 @@ Content Sections - basic style
   background-color:#c75fdb;
 }
 .cd-section > div {
-  /* vertically align <div> inside <section> */
   display: table-cell;
   vertical-align: middle;
   text-align: center;
@@ -431,26 +315,18 @@ Content Sections - basic style
   font-size: 2.4rem;
   line-height: 1.4;
 }
-.cd-section h1 b, .cd-section h2 b {
+/* .cd-section h1 b, .cd-section h2 b {
   color: #584c5e;
-}
+} */
 .cd-section p {
   margin: 1em auto 0;
   line-height: 1.6;
   width: 90%;
   max-width: 680px;
   color: rgba(234, 242, 227, 0.6);
-}
-@media only screen and (min-width: 800px) {
-  .cd-section h1, .cd-section h2 {
-    font-size: 3rem;
-  }
-  .cd-section p {
-    font-size: 2rem;
-  }
-}
+} 
 
-.cd-scroll-down {
+ .cd-scroll-down {
   position: absolute;
   left: 50%;
   right: auto;
@@ -459,11 +335,10 @@ Content Sections - basic style
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
   transform: translateX(-50%);
-  bottom: 20px;
   width: 44px;
   height: 44px;
-  background: url(../img/cd-arrow-bottom.svg) no-repeat center center;
-}
+  
+} 
 
 /* -------------------------------- 
 
@@ -478,7 +353,7 @@ no-js
    height: auto; 
   width: 100%;
   /* max-width: none; */
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(73, 29, 78, 0.692);
   border-radius: 0;
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
@@ -486,14 +361,6 @@ no-js
   -o-transform: scale(1);
   transform: scale(1);
 }
-/* .no-js .cd-vertical-nav::before {
-  display: none;
-} */
-/* .no-js .cd-vertical-nav ul::after {
-  clear: both;
-  content: "";
-  display: table;
-} */
 .no-js .cd-vertical-nav li {
   display: inline-block;
   float: left;
@@ -501,22 +368,14 @@ no-js
 .no-js .cd-vertical-nav a {
   padding: 0 1em;
   margin: 1.5em 1em;
-  color: #eaf2e3;
+   color: #fafcf8; 
 }
-.no-js .cd-vertical-nav a.active {
-  color: #c0a672;
+.no-js .cd-vertical-nav a:hover {
+  color: #bd36fc;
 }
 .no-js .cd-vertical-nav a::after, .no-js .cd-vertical-nav a::before {
   display: none;
 }
-.no-js .cd-vertical-nav .label {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-
 
 
 @media only screen and (max-width: 1102px){
@@ -540,5 +399,5 @@ no-js
   #mae{
     background: url()
   }
-  
+
 }
