--- a/Nova pasta/css/reset.css
+++ b/Nova pasta/css/reset.css
@@ -78,3 +78,51 @@
     -o-transform: translateX(-50%) translateY(-4.5em) scale(0.25);
     transform: translateX(-50%) translateY(-4.5em) scale(0.25);
   } */
+
+
+ /* .cd-vertical-nav {
+    right: 0;
+    top: 0;
+    bottom: auto;
+    height: 100vh;
+    width: 90px;
+    max-width: none;
+    max-height: none;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    background-color: transparent;
+    display: table;
+  } */
+
+  /* .cd-vertical-nav::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    -webkit-transform: translateX(100%);
+    -moz-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
+    -webkit-transition: -webkit-transform 0.4s;
+    -moz-transition: -moz-transform 0.4s;
+    transition: transform 0.4s;
+  } */
+  /* .no-touch .cd-vertical-nav:hover::before, .touch .cd-vertical-nav::before {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+  } */
+  /* .cd-vertical-nav ul {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+  } */
