--- a/Nova pasta/css/reset.css
+++ b/Nova pasta/css/reset.css
@@ -79,6 +79,31 @@
     transform: translateX(-50%) translateY(-4.5em) scale(0.25);
   } */
 
+  /* .cd-vertical-nav.open + .cd-nav-trigger span {
+  background-color: rgba(58, 44, 65, 0);
+} */
+/* .cd-vertical-nav.open + .cd-nav-trigger span::before, .cd-vertical-nav.open + .cd-nav-trigger span::after {
+  height: 3px;
+  width: 20px;
+  border-radius: 0;
+  left: -8px;
+} */
+/* .cd-vertical-nav.open + .cd-nav-trigger span::before {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 1px;
+} */
+/* .cd-vertical-nav.open + .cd-nav-trigger span::after {
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+  bottom: 0;
+} */
 
  /* .cd-vertical-nav {
     right: 0;
@@ -126,3 +151,38 @@
     vertical-align: middle;
     text-align: center;
   } */
+
+
+  /* .cd-vertical-nav {
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0);
+  -webkit-transform-origin: right bottom;
+  -moz-transform-origin: right bottom;
+  -ms-transform-origin: right bottom;
+  -o-transform-origin: right bottom;
+  transform-origin: right bottom;
+  -webkit-transition: -webkit-transform 0.2s;
+  -moz-transition: -moz-transform 0.2s;
+  transition: transform 0.2s;
+  border-radius: 0.25em;
+  background-color: rgba(234, 242, 227, 0.9);
+} */
+
+/* .cd-nav-trigger span::before, .cd-nav-trigger span::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #9c71b1;
+  border-radius: inherit;
+} */
+/* .cd-nav-trigger span::before {
+  top: -9px;
+} */
+/* .cd-nav-trigger span::after {
+  bottom: -9px;
+} */
