--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -99,7 +99,6 @@ a {
 }
 
 .cd-image-replace {
-  /* replace text with image */
   display: inline-block;
   overflow: hidden;
   text-indent: 100%;
@@ -107,28 +106,6 @@ a {
   color: transparent;
 }
 
-/* -------------------------------- 
-
-Navigation trigger - visible on small devices only
-
--------------------------------- */
-
-.cd-nav-trigger span::before, .cd-nav-trigger span::after {
-  /* bottom and top dots */
-  content: '';
-  position: absolute;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #9c71b1;
-  border-radius: inherit;
-}
-.cd-nav-trigger span::before {
-  top: -9px;
-}
-.cd-nav-trigger span::after {
-  bottom: -9px;
-}
 @media only screen and (min-width: 800px) {
   .cd-nav-trigger {
     display: none;
@@ -137,26 +114,9 @@ Navigation trigger - visible on small devices only
 
 /* -------------------------------- 
 
-Vertical navigation
+Detalhes da Nav
 
 -------------------------------- */
-.cd-vertical-nav {
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  -o-transform: scale(0);
-  transform: scale(0);
-  -webkit-transform-origin: right bottom;
-  -moz-transform-origin: right bottom;
-  -ms-transform-origin: right bottom;
-  -o-transform-origin: right bottom;
-  transform-origin: right bottom;
-  -webkit-transition: -webkit-transform 0.2s;
-  -moz-transition: -moz-transform 0.2s;
-  transition: transform 0.2s;
-  border-radius: 0.25em;
-  background-color: rgba(234, 242, 227, 0.9);
-}
 .cd-vertical-nav a {
   display: block;
   padding: 1em;
@@ -164,32 +124,7 @@ Vertical navigation
   font-weight: bold;
   border-bottom: 1px solid rgba(58, 44, 65, 0.1);
 }
-.cd-vertical-nav.open + .cd-nav-trigger span {
-  background-color: rgba(58, 44, 65, 0);
-}
-.cd-vertical-nav.open + .cd-nav-trigger span::before, .cd-vertical-nav.open + .cd-nav-trigger span::after {
-  /* transform dots in 'X' icon */
-  height: 3px;
-  width: 20px;
-  border-radius: 0;
-  left: -8px;
-}
-.cd-vertical-nav.open + .cd-nav-trigger span::before {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  top: 1px;
-}
-.cd-vertical-nav.open + .cd-nav-trigger span::after {
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-  bottom: 0;
-}
+
 @media only screen and (min-width: 800px) {
   .cd-vertical-nav a {
     font-size: 1.2rem;
