--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -43,6 +43,9 @@ nav{
   text-transform:uppercase;
   
   }
+  .mae{
+    padding: 0;
+  }
   .no-js .cd-vertical-nav a:active {
     color: #bd36fc;
     
@@ -66,6 +69,7 @@ nav{
     display: flex;
     padding: 0;
     flex-direction: column;
+    overflow: hidden;
 }
 #filha1{
   display: flex;
@@ -75,6 +79,7 @@ nav{
   width: 50%;
   height:9%;
   margin: 0%;
+  padding: 0;
   align-items: flex-start;
   opacity: 0.5;
   filter: alpha(opacity=50);    
@@ -86,6 +91,7 @@ nav{
   width: 50%;
   height: 13%;
   margin: 0%;
+  padding: 0;
   align-items: flex-end; 
   opacity: 0.5;
   filter: alpha(opacity=50);
@@ -148,6 +154,7 @@ Sections - estilo básico
   height: 100vh;
   background: #550555;
 }
+
 .cd-section:nth-of-type(even) {
   background-color:#c75fdb;
 }
@@ -155,7 +162,11 @@ Sections - estilo básico
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+  padding: 0;
+  margin: 0;
+  
 }
+
 .cd-section h1, .cd-section h2 {
   width: 90%;
   margin: 0 auto;
@@ -226,7 +237,7 @@ no-js
 }
 
 
-@media only screen and (max-width: 1102px){
+@media only screen and (max-width: 1208px){
   #imagem1{
    display: none;
   }
@@ -244,8 +255,22 @@ no-js
   vertical-align: middle;
   text-align: center;
   }
-  #mae{
-    background: url()
+  #section2{
+    background-image: url(2.jpg);
+  
   }
 
+}
+
+@media only screen and (max-width: 1195px){
+  #imagem1{
+    width: 50%;
+    
+    
+}
+#imagem2{
+    width: 50%;
+    
+    
+}
 }
