--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -11,6 +15,8 @@ body {
   background-color:#550555;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin:0;
+  padding:0;
 }
 nav{
   position: fixed;
@@ -305,8 +311,7 @@ no-js
       right: 0;
       width: 100vw;
       height: 100vh;
-      margin-top: 1%;
-      margin-right: 2%;
+      
       display: flex;
       flex-direction: column;
       z-index: 1;
@@ -316,11 +321,11 @@ no-js
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(87, 8, 88, 0.979);
     width:100%;
      height:80px;
     align-self: flex-start;
-    border-radius: 2%;
+   
     z-index: 1;
     padding: 0;
     margin: 0;
