--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -19,6 +19,12 @@ nav{
   margin:0 auto;
   padding:0;
   }
+#section1{
+  background-image: url(../back4-01.jpg);
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+
+}
   #txtbusca {
   border:0px solid #222;
   background:rgb(219, 189, 236);
@@ -61,7 +67,7 @@ nav{
     border-color: #ecb4de ;
     box-shadow: 0  0  10px  #9351b4;
   }
-  div mae{
+  /* div mae{
     margin: 0%;
     background-color: black;
     height: 20%;
@@ -70,14 +76,15 @@ nav{
     padding: 0;
     flex-direction: column;
     overflow: hidden;
-}
+} */
 #filha1{
   display: flex;
   
 }
+
 #imagem1{
   width: 50%;
-  height:9%;
+  height:6%;
   margin: 0%;
   padding: 0;
   align-items: flex-start;
@@ -89,9 +96,8 @@ nav{
 }
 #imagem2{
   width: 50%;
-  height: 13%;
+  height: 6%;
   margin: 0%;
-  padding: 0;
   align-items: flex-end; 
   opacity: 0.5;
   filter: alpha(opacity=50);
@@ -153,6 +159,11 @@ Sections - estilo básico
   width: 100%;
   height: 100vh;
   background: #550555;
+}
+#section1{
+  display: table;
+  width: 100%;
+  height: 100vh;
 }
 
 .cd-section:nth-of-type(even) {
