--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -1,7 +1,9 @@
 html {
   font-size: 62.5%;
 }
-
+.opcoes{
+  display: none;
+}
 body {
   font-size: 1.6rem;
   font-family: "Sintony", sans-serif;
@@ -102,7 +104,7 @@ nav{
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-#text1{
+.text1{
   padding-top: 50px;
 }
 a {
@@ -234,6 +236,7 @@ no-js
 .no-js .cd-vertical-nav li {
   display: inline-block;
   float: left;
+  
 }
 .no-js .cd-vertical-nav a {
   padding: 0 1em;
@@ -267,10 +270,16 @@ no-js
   text-align: center;
   }
   #section2{
-    background-image: url(2.jpg);
-  
+    background-image: url(../banner6-01.jpg);
+    background-size: cover;
   }
-
+.informacao{
+  width: 100%;
+  max-width: 700px;
+  /* background-color: #fdf9fd1c; */
+  color: #ffffff;
+  
+}
 }
 
 @media only screen and (max-width: 1195px){
@@ -283,5 +292,54 @@ no-js
     width: 50%;
     
     
+}
+}
+@media only screen and (max-width: 720px){
+  .cd-vertical-nav{
+    display: none;
+    
+  }
+  .opcoes{
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 100vw;
+      height: 100vh;
+      margin-top: 1%;
+      margin-right: 2%;
+      display: flex;
+      flex-direction: column;
+      z-index: 1;
+  }
+  #barra{
+    display: none;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    width:100%;
+     height:80px;
+    align-self: flex-start;
+    border-radius: 2%;
+    z-index: 1;
+}
+
+  #barra a{
+    color: white;
+    font-size: 10pt;
+    margin: 1px;
+}
+
+#barra a:hover{
+    color: rgb(94, 93, 93);
+    transition-duration: 1s;
+}
+
+
+#hamburguer{
+  position: fixed;
+    cursor: pointer;
+    align-self: flex-end;
+    height: 11%;
 }
 }
