--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -352,3 +352,23 @@ no-js
     height: 11%;
 }
 }
+
+footer{
+  display: flex;
+  justify-content:center;
+   background-color: #c569e0;
+  align-items:center;
+}
+
+footer > img{
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+img:hover{
+  opacity: 0.5;
+  transition-duration: 1s;
+
+}
