--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -8,6 +8,14 @@ html {
 .opcoes{
   display: none;
 }
+#section2{
+display: flex;
+flex-direction: column;
+justify-content: center;
+
+
+}
+
 body {
   font-size: 1.6rem;
   font-family: "Sintony", sans-serif;
@@ -68,12 +76,21 @@ nav{
     color: #bd36fc;
     
   }
+  .cd-section .carouseltitle{
+    color:rgba(238, 187, 248, 0.849);
+    font-weight: bold;
+    font-size: 50pt;
+  }
+  .cd-section .carousel{
+    color:white;
+  }
   .label:hover{
     color: #550555
   }
   #btnBusca:hover {
   background:#e291e25d; 
   }
+  
   #txtbusca:focus {
     outline: none ;
     border-color: #ecb4de ;
@@ -172,7 +189,7 @@ Sections - estilo básico
   display: table;
   width: 100%;
   height: 100vh;
-  background: #550555;
+  background: #f8ecf8;
 }
 #section1{
   display: table;
@@ -181,7 +198,7 @@ Sections - estilo básico
 }
 
 .cd-section:nth-of-type(even) {
-  background-color:#c75fdb;
+  background-color:#fceefc;
 }
 .cd-section > div {
   display: table-cell;
@@ -198,6 +215,7 @@ Sections - estilo básico
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.4;
+  color: #550555;
 }
 /* .cd-section h1 b, .cd-section h2 b {
   color: #584c5e;
@@ -207,7 +225,7 @@ Sections - estilo básico
   line-height: 1.6;
   width: 90%;
   max-width: 680px;
-  color: rgba(234, 242, 227, 0.6);
+  color: rgba(77, 6, 99, 0.6);
 } 
 
  .cd-scroll-down {
@@ -327,7 +345,7 @@ no-js
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgba(87, 8, 88, 0.979);
+    background-color: rgba(244, 225, 245, 0.979);
     width:100%;
      height:80px;
     align-self: flex-start;
