--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -98,12 +98,9 @@ nav{
   width: 100%;
   z-index: 1;
 }
-#busca {
-  margin:0 auto;
-  padding:0;
-  }
+
 #section1{
-  background-image: url(../back4-01.jpg);
+  background-image: url(../mimgs-01.png);
   /* background-repeat: no-repeat; */
   background-size: cover;
 
@@ -146,10 +143,10 @@ nav{
   .cd-section .carouseltitle{
     color:rgba(238, 187, 248, 0.849);
     font-weight: bold;
-    font-size: 50pt;
+    font-size: 80pt;
   }
   .cd-section .carousel{
-    color:white;
+    color:rgb(241, 213, 248);
   }
   .label:hover{
     color: #550555
@@ -297,6 +294,11 @@ Detalhes da Nav
   .cd-vertical-nav .label {
     display: block;
   }
+  /* .btn-lg{
+    width: 30%;
+    height: 90%;
+    font-size: 15px;
+  } */
 }
 
 /* -------------------------------- 
@@ -468,7 +470,7 @@ no-js
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgba(244, 225, 245, 0.979);
+    background-color: rgba(111, 6, 116, 0.911);
     width:100%;
      height:80px;
     align-self: flex-start;
@@ -477,18 +479,16 @@ no-js
     padding: 0;
     margin: 0;
 }
-/* .btn-lg{
-  width: 80%;
+.btn-lg{
+  width: 85%;
   height: 90%;
   font-size: 20px;
   flex-direction: row;
+  margin-bottom: 20px;
+  
 
-} */
-/* .btn-lg{
-  width: 30%;
-  height: 90%;
-  font-size: 15px;
-} */
+} 
+
 
   #barra a{
     color: white;
@@ -534,4 +534,17 @@ img:hover{
 .d-block{
   width: 20%;
 
+}
+@media only screen and (max-width: 947px){
+#it {
+  display: none;
+}
+#section2 {
+  display: flex;  
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+ 
+}
 }
