--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -458,8 +458,6 @@ no-js
       position: fixed;
       top: 0;
       right: 0;
-      width: 100vw;
-      height: 100vh;
       
       display: flex;
       flex-direction: column;
@@ -467,12 +465,12 @@ no-js
   }
   #barra{
     display: none;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     background-color: rgba(111, 6, 116, 0.911);
-    width:100%;
-     height:80px;
+    width:100vw;
+     height:100vh;
     align-self: flex-start;
    
     z-index: 1;
@@ -507,6 +505,7 @@ no-js
     cursor: pointer;
     align-self: flex-end;
     height: 11%;
+    z-index: 2;
 }
 }
 
