--- a/Nova pasta/css/style.css
+++ b/Nova pasta/css/style.css
@@ -64,6 +64,70 @@ body {
   margin:0;
   padding:0;
 }
+
+/* inico */
+#section5{
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
+#company{
+  font-size: 50px;
+  text-align: center;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding-bottom: 6px;
+  letter-spacing: 0.3px;
+  padding: 0;
+}
+.section-title::after {
+  content: "";
+  height: 3px;
+  background: #fbb900;
+  width: 80px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+/****************/
+/*	 BX-SLIDER 	*/
+/****************/
+section.client1 {
+padding:4em 0em;
+
+
+}
+section.client .section-title {
+margin-bottom: 6em;
+}
+.bx-controls {
+position: relative;
+}
+.bx-wrapper .bx-pager {
+  text-align: center;
+  padding-top: 30px;
+}
+.bx-wrapper .bx-pager .bx-pager-item, .bx-wrapper .bx-controls-auto .bx-controls-auto-item {
+  display: inline-block;
+  *zoom: 1;
+  *display: inline;
+}
+.bx-wrapper .bx-pager.bx-default-pager a {
+  background: #666;
+  text-indent: -9999px;
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin: 0 5px;
+  outline: 0;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+/* fim */
 #titulo-pag{
   font-weight: bold;
   font-size: 300%;
@@ -574,7 +638,7 @@ img:hover{
     display: none;
   }
   #section4 {
-    background-image: url(../char.png);
+    background-image: url(../char3-01.png);
     background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
