criando pagina de cadastro

--- a/Nova pasta/css/empresa.css
+++ b/Nova pasta/css/empresa.css
@@ -6,11 +6,11 @@ html {
 	
 	/*background = gradient + image pattern combo*/
 	background: 
-		linear-gradient(rgba(230, 170, 222, 0.6), rgba(138, 17, 185, 0.6));
+		linear-gradient(rgba(245, 221, 242, 0.6), rgba(219, 175, 236, 0.6));
 }
 
 body {
-	font-family: montserrat, arial, verdana;
+	font-family: "Sintony", arial, verdana;
 }
 /*form styles*/
 #msform {
@@ -85,12 +85,19 @@ body {
 }
 #progressbar li {
 	list-style-type: none;
-	color: white;
+	color: rgb(115, 9, 119);
 	text-transform: uppercase;
 	font-size: 9px;
 	width: 33.33%;
 	float: left;
 	position: relative;
+	
+}
+input:focus{
+	border-color: #b55efc;
+  color: #c25efc;
+  outline: none ;
+  box-shadow: 0  0  10px  #9351b4;
 }
 #progressbar li:before {
 	content: counter(step);
