--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  
 }
 
 html {
@@ -59,7 +60,6 @@ body {
   font-size: 1.6rem;
   font-family: "Sintony", sans-serif;
   color: #f6f8f5;
-  background-color:#5f1f5f;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -558,7 +558,9 @@ no-js
     display: none;
     
   }
-  
+  body{
+    overflow: hidden;
+  }
   .opcoes{
       position: fixed;
       top: 0;
