--- a/css/empresa.css
+++ b/css/empresa.css
@@ -125,8 +125,8 @@ input:focus{
 
 
 
-@media only screen and (max-width: 720px){
-	html{
+@media only screen and (max-width: 800px){
+	body{
 	  overflow: hidden;
 	}
 }
