ajustando a página de cadastro

--- a/css/empresa.css
+++ b/css/empresa.css
@@ -129,5 +129,8 @@ input:focus{
 	body{
 	  overflow: hidden;
 	  position: fixed;
+	  justify-items: center;
+	  justify-content: center;
+	  align-items: center;
 	}
 }
