--- a/css/ongs.css
+++ b/css/ongs.css
@@ -57,7 +57,6 @@
 	transition: 0.15s ease-in-out;
   } 
   #fim:hover{
-	
 	background: purple;
 	transition: 0.15s ease-in-out;
   } 
@@ -158,4 +157,7 @@
 	#fim{
 		padding: 10px 30px;
 	}
+	#fimtext{
+	  font-size: 8px;
+  }
   }
