--- a/css/style.css
+++ b/css/style.css
@@ -142,22 +142,24 @@ position: relative;
 .btn-primary {
   color: #fff;
   background-color: #b83fe7dc;
-  border-color: #9a08b8;
+  transition: ease-in-out;
+  border-radius: 10px;
 }
 .btn-secondary {
   color: #fff;
   background-color: #b83fe7dc;
-  border-color: #9a08b8;
+  transition: ease-in-out;
+  
 }
 .btn-primary:hover{
   background-color: #e1a8f3;
-  border-color: #9839a5;
   transition-duration: 1s;
+  
 }
 .btn-secondary:hover{
   background-color: #e1a8f3;
-  border-color: #9839a5;
   transition-duration: 1s;
+  
 }
 nav{
   position: fixed;
@@ -166,7 +168,7 @@ nav{
 }
 
 #section1{
-  background-image: url(../imgs/mimgs-01.png);
+  background-image: url(../imgs/teste2-01.png);
   /* background-repeat: no-repeat; */
   background-size: cover;
 
@@ -321,13 +323,9 @@ textarea {
 	border-color: #b55efc;
   color: #c25efc;
   outline: none ;
-  box-shadow: 0  0  10px  #9351b4;
+  box-shadow: 0  0  10px  purple;
   }
   
-
-
-
-
 @media only screen and (max-width: 1208px){
   #imagem1{
    display: none;
@@ -346,10 +344,10 @@ textarea {
   vertical-align: middle;
   text-align: center;
   }
-  #section2{
+  /* #section2{
     background-image: url(../imgs/banner6-01.jpg);
     background-size: cover;
-  }
+  } */
 .informacao{
   width: 100%;
   max-width: 700px;
@@ -581,7 +579,7 @@ no-js
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgba(235, 187, 238, 0.911);
+    background-color: rgba(148, 36, 156, 0.952);
     width:100vw;
      height:100vh;
     align-self: flex-start;
