--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,10 @@ img:hover{
     display: none;
 
   }
+  #section1{
+    background-image: url(../imgs/scetion3-01.png);
+    background-size: cover;
+  }
   #section4 > .carousel-inner{
     display: none;
   }
