--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,6 @@ position: relative;
   color: #fff;
   background-color: #b83fe7dc;
   transition: ease-in-out;
-  border-radius: 10px;
 }
 .btn-secondary {
   color: #fff;
@@ -152,13 +151,14 @@ position: relative;
   
 }
 .btn-primary:hover{
-  background-color: #e1a8f3;
+  background-color: #d886f1;
   transition-duration: 1s;
   
 }
 .btn-secondary:hover{
-  background-color: #e1a8f3;
+  background-color: #d88fee;
   transition-duration: 1s;
+  
   
 }
 nav{
@@ -205,7 +205,8 @@ nav{
     padding: 0;
   }
   .no-js .cd-vertical-nav a:active {
-    color: #bd36fc;
+    color:purple;
+    transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
     
   }
   .cd-section .carouseltitle{
@@ -217,7 +218,8 @@ nav{
     color:rgb(241, 213, 248);
   }
   .label:hover{
-    color: #550555
+    color: #550555;
+    
   }
   #btnBusca:hover {
   background:#e291e25d; 
@@ -406,6 +408,7 @@ Detalhes da Nav
   font-weight: bold;
   border-bottom: 1px solid rgba(107, 11, 116, 0.1);
   transition-delay: 0.4s;
+  
  
 }
 .no-js .cd-vertical-nav li {
@@ -530,7 +533,7 @@ no-js
   
 }
 .no-js .cd-vertical-nav a:hover {
-  color: #bd36fc;
+  color: purple;
 }
 .no-js .cd-vertical-nav a::after, .no-js .cd-vertical-nav a::before {
   display: none;
@@ -583,7 +586,6 @@ no-js
     width:100vw;
      height:100vh;
     align-self: flex-start;
-   
     z-index: 1;
     padding: 0;
     margin: 0;
@@ -604,6 +606,7 @@ no-js
     font-size: 30pt;
     margin: 1px;
     transition-duration: 3s;
+    
 }
 
 #barra a:hover{
