--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,17 @@ position: relative;
 .btn-secondary:hover{
   background-color: #d88fee;
   transition-duration: 1s;
-  
-  
+}
+[class^="btn-"] {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  height: 80px;
+  max-width: 250px;
+  margin: 1rem auto;
+  text-transform: uppercase;
+  border: 1px solid currentColor;
 }
 nav{
   position: fixed;
@@ -185,7 +194,6 @@ nav{
 
 #section1{
   background-image: url(../imgs/teste2-01.png);
-  /* background-repeat: no-repeat; */
   background-size: cover;
 
 }
@@ -193,30 +201,6 @@ nav{
 #cadastro{
   margin-bottom: 200px;
 }
-  /* #txtbusca {
-  border:0px solid #222;
-  background:rgb(219, 189, 236);
-  width:390px;
-  height:35px;
-  margin:0 auto;
-  padding:5px 0 5px 5px;
-  float:center; 
-  line-height:36px; 
-  font-family: Arial, Helvetica, sans-serif;
-  }
-  #btnBusca {
-  background:#c569e0;
-  position:relative;
-  border:0px solid #222;
-  color:rgba(232, 202, 236, 0.637); 
-  margin:0 auto;
-  padding:10px;
-  border:0 none;
-  font-size:17px;
-  font-weight:bold;
-  text-transform:uppercase;
-  
-  } */
   .mae{
     padding: 0;
   }
@@ -248,34 +232,6 @@ nav{
     box-shadow: 0  0  10px  #9351b4;
   }
   
-/* #filha1{
-  display: flex;
-} */
-
-/* #imagem1{
-  width: 50%;
-  height:6%;
-  margin: 0%;
-  padding: 0;
-  align-items: flex-start;
-  opacity: 0.5;
-  filter: alpha(opacity=50);    
-} */
-/* #filha2{
-  display: flex;
-}
-#imagem2{
-  width: 50%;
-  height: 6%;
-  margin: 0%;
-  align-items: flex-end; 
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-.text1{
-  padding-top: 50px;
-} */
-
 
 .cd-image-replace {
   display: inline-block;
