--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,7 @@ Sections - estilo básico
   width: 90%;
   max-width: 680px;
   color: rgba(112, 17, 141, 0.6);
+  text-align: justify;
 } 
 
  .cd-scroll-down {
