--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ position: relative;
   font-weight: bold;
   font-size: 300%;
 }
-.btn-lg{
+/* .btn-lg{
   width: 30%;
   height: 90%;
   font-size: 20px;
@@ -174,7 +174,82 @@ position: relative;
 .btn-secondary:hover{
   background-color: #d88fee;
   transition-duration: 1s;
+} */
+
+#section-new > .btn {
+  margin-right: 30px;
+  margin-bottom: 4px;
+  margin-top: 20px;
+  font-size: 12px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 700;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
+#section-new > .btn.btn-md {
+  padding: 10px 20px !important;
+}
+#section-new > .btn.btn-lg {
+  padding: 18px 36px !important;
+}
+#section-new  > .btn:hover, .btn:active, .btn:focus {
+  box-shadow: none !important;
+  outline: none !important;
+}
+
+#section-new > .btn-primary {
+  background:  #970c97;
+  color: purple;
+  border: 2px solid  #970c97;
+}
+#section-new > .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+  background:  #970c97!important;
+  border-color:  #970c97 !important;
+}
+#section-new > .btn-primary.btn-outline {
+  background: rgba(128, 0, 128, 0.103);
+  color: purple;
+  font-weight: bolder;
+  border: 2px solid  #970c97;
+}
+#section-new > .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
+  background:  #e95e5e;
+  color: #fff;
+}
+
+
+
+#section-new > .btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 10px 20px;
+    font-size: 20px;
+    line-height: 1.42857;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+#section-new > a {
+    text-decoration: none;
+    background-color: transparent;
+}
+
 [class^="btn-"] {
   position: relative;
   display: block;
@@ -271,7 +346,7 @@ textarea {
 .js-unhighlight-label {
 	color: #999 
 }
-.btn-start-order {
+ .btn-start-order {
 	background: 0 0 #ffffff;
     border: 1px solid #2f323a;
     border-radius: 3px;
@@ -553,12 +628,14 @@ no-js
     padding: 0;
     margin: 0;
 }
-.btn-lg{
-  width: 85%;
-  height: 90%;
+#section-new > .btn-primary{
+  /* width: 85%;
+  height: 90%; */
   font-size: 20px;
   flex-direction: row;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+margin-right: 0%;
+
 } 
 
 #barra a{
