--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ nav{
 #section1{
   background-image: url(../imgs/teste2-01.png);
   background-size: cover;
+  background-attachment: fixed;
 
 }
 
